--- a/imdb.ipynb
+++ b/imdb.ipynb
@@ -33,7 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    load_df = pd.read_csv(path,sep=';')\n",
+    "    where=load_df['Id'].iloc[-1]\n",
+    "except:\n",
+    "  where=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,13 +60,13 @@
     "    keyword_elements=soup_keyword.find_all('a',class_='ipc-metadata-list-summary-item__t')\n",
     "    for element in keyword_elements:\n",
     "     word += ', ' + element.text\n",
-    "    print('keyword')\n",
+    "    #print('keyword')\n",
     "    return word[2:len(word)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,11 +79,11 @@
     "    date=soup_release_info.find('span',class_='ipc-metadata-list-item__list-content-item')\n",
     "    try:\n",
     "       soup_release_info.find('article',class_='sc-8eb80a87-0 hQQXzj').text is not None\n",
-    "       print('release info')\n",
+    "      # print('release info')\n",
     "       return 'NaN'\n",
     "\n",
     "    except:\n",
-    "       print('release info')\n",
+    "       #print('release info')\n",
     "       return date.text\n",
     "\n",
     "    \n"
@@ -78,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +137,6 @@
     "      else:\n",
     "        country_name='NaN'\n",
     "      inde=inde+1\n",
-    "    print('country')\n",
     "    return country_name"
    ]
   },
@@ -137,7 +149,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 https://www.imdb.com/title/tt0000001/\n"
+      "1 https://www.imdb.com/title/tt0000001/\n",
+      "release info\n",
+      "country\n",
+      "keyword\n",
+      "2 https://www.imdb.com/title/tt0000002/\n",
+      "release info\n",
+      "country\n",
+      "keyword\n",
+      "3 https://www.imdb.com/title/tt0000003/\n",
+      "release info\n",
+      "country\n",
+      "keyword\n",
+      "4 https://www.imdb.com/title/tt0000004/\n",
+      "release info\n",
+      "country\n",
+      "keyword\n",
+      "5 https://www.imdb.com/title/tt0000005/\n",
+      "release info\n",
+      "country\n",
+      "keyword\n",
+      "6 https://www.imdb.com/title/tt0000006/\n",
+      "release info\n",
+      "country\n",
+      "keyword\n",
+      "7 https://www.imdb.com/title/tt0000007/\n",
+      "release info\n",
+      "country\n",
+      "keyword\n",
+      "8 https://www.imdb.com/title/tt0000008/\n",
+      "release info\n",
+      "country\n",
+      "keyword\n",
+      "9 https://www.imdb.com/title/tt0000009/\n",
+      "release info\n",
+      "country\n",
+      "keyword\n",
+      "10 https://www.imdb.com/title/tt0000010/\n"
      ]
     }
    ],
