--- a/imdb.ipynb
+++ b/imdb.ipynb
@@ -184,12 +184,16 @@
     "for num in range(where,100000000):\n",
     "                            len_num=7-len(str(num))\n",
     "                            id_='0'*len_num+str(num)\n",
-    "                            #id_=str(str(q)+str(w)+str(e)+str(r)+str(t)+str(y)+str(u))\n",
     "                            w_url='https://www.imdb.com/title/tt'+id_+'/'\n",
-    "                            print(i,w_url)\n",
-    "                            response=requests.get(w_url,headers=headers)\n",
-    "                            content=response.content\n",
-    "                            soup=BeautifulSoup(content,'html.parser')\n",
+    "                            try:\n",
+    "                              response=requests.get(w_url,headers=headers)\n",
+    "                              content=response.content\n",
+    "                              soup=BeautifulSoup(content,'html.parser')\n",
+    "                              Title=soup.find('span',class_='sc-afe43def-1 fDTGTb').text\n",
+    "                            except:\n",
+    "                              print(i,w_url,'>> Error')\n",
+    "                              continue\n",
+    "                            print(i,w_url,'<< processing')\n",
     "                            Title=soup.find('span',class_='sc-afe43def-1 fDTGTb').text\n",
     "                            try:\n",
     "                             storyline=soup.find_all('div',class_='ipc-html-content-inner-div')[2].text\n",
@@ -199,7 +203,10 @@
     "                            Date=release_info(id_)\n",
     "                            \n",
     "                            Runtime_,colr=runtime(id_)\n",
-    "                            Rating=(soup.find_all('span',class_='sc-bde20123-1 iZlgcd')[0]).text\n",
+    "                            try:\n",
+    "                             Rating=(soup.find_all('span',class_='sc-bde20123-1 iZlgcd')[0]).text\n",
+    "                            except:\n",
+    "                              Rating=\"NaN\"\n",
     "                            country_=country(soup)\n",
     "                            df['Country'].append(country_)\n",
     "                            key_words=keywords(str(id_))\n",
