creeated function to scrap 'Genres'

--- a/imdb.ipynb
+++ b/imdb.ipynb
@@ -113,11 +113,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df={'Id':[],'Title':[],'Storyline':[],'Director':[],'Date':[],'Runtime':[],'Rating':[],'Color':[],'Country':[],'keywords':[]}"
+    "df={'Id':[],'Title':[],'Storyline':[],'Genres':[],'Director':[],'Date':[],'Runtime':[],'Rating':[],'Color':[],'Country':[],'keywords':[]}"
    ]
   },
   {
@@ -142,126 +142,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_genres = [\"Action\",\"Adventure\",\"Comedy\",\"Drama\",\"Horror\",\"Science Fiction (Sci-Fi)\",\"Fantasy\",\"Romance\",\"Mystery\",\"Crime\",\"Thriller\",\"Animation\",\"Musical\",\"War\",\"Western\",\"Biography\",\"Historical\",\n",
+    "    \"Documentary\",\"Family\",\"Sports\",\"Superhero\",\"Musical Comedy\",\"Film Noir\",\"Romantic Comedy (Rom-Com)\",\"Fantasy Adventure\",\"Action Comedy\",\"Psychological Thriller\",\"Science Fantasy\",\n",
+    "    \"Epic\",\"Post-Apocalyptic\",\"History\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def genere_fun(soup):\n",
+    " gen_list=' '\n",
+    " try:\n",
+    "  genres = soup.find_all('span', class_='ipc-chip__text')\n",
+    "  for g in  genres:\n",
+    "    if g.text in movie_genres:\n",
+    "        gen_list=g.text+' '+gen_list\n",
+    "  return gen_list \n",
+    " except:\n",
+    "  return 'NaN'\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 https://www.imdb.com/title/tt0000001/ << processing\n",
-      "2 https://www.imdb.com/title/tt0000002/ << processing\n",
-      "3 https://www.imdb.com/title/tt0000003/ << processing\n",
-      "4 https://www.imdb.com/title/tt0000004/ << processing\n",
-      "5 https://www.imdb.com/title/tt0000005/ << processing\n",
-      "6 https://www.imdb.com/title/tt0000006/ << processing\n",
-      "7 https://www.imdb.com/title/tt0000007/ << processing\n",
-      "8 https://www.imdb.com/title/tt0000008/ << processing\n",
-      "9 https://www.imdb.com/title/tt0000009/ << processing\n",
-      "10 https://www.imdb.com/title/tt0000010/ << processing\n",
-      "11 https://www.imdb.com/title/tt0000011/ << processing\n",
-      "12 https://www.imdb.com/title/tt0000012/ << processing\n",
-      "13 https://www.imdb.com/title/tt0000013/ << processing\n",
-      "14 https://www.imdb.com/title/tt0000014/ << processing\n",
-      "15 https://www.imdb.com/title/tt0000015/ << processing\n",
-      "16 https://www.imdb.com/title/tt0000016/ << processing\n",
-      "17 https://www.imdb.com/title/tt0000017/ << processing\n",
-      "18 https://www.imdb.com/title/tt0000018/ << processing\n",
-      "19 https://www.imdb.com/title/tt0000019/ << processing\n",
-      "20 https://www.imdb.com/title/tt0000020/ << processing\n",
-      "21 https://www.imdb.com/title/tt0000021/ << processing\n",
-      "22 https://www.imdb.com/title/tt0000022/ << processing\n",
-      "23 https://www.imdb.com/title/tt0000023/ << processing\n",
-      "24 https://www.imdb.com/title/tt0000024/ << processing\n",
-      "25 https://www.imdb.com/title/tt0000025/ << processing\n",
-      "26 https://www.imdb.com/title/tt0000026/ << processing\n",
-      "27 https://www.imdb.com/title/tt0000027/ << processing\n",
-      "28 https://www.imdb.com/title/tt0000028/ << processing\n",
-      "29 https://www.imdb.com/title/tt0000029/ << processing\n",
-      "30 https://www.imdb.com/title/tt0000030/ << processing\n",
-      "31 https://www.imdb.com/title/tt0000031/ << processing\n",
-      "32 https://www.imdb.com/title/tt0000032/ << processing\n",
-      "33 https://www.imdb.com/title/tt0000033/ << processing\n",
-      "34 https://www.imdb.com/title/tt0000034/ << processing\n",
-      "35 https://www.imdb.com/title/tt0000035/ << processing\n",
-      "36 https://www.imdb.com/title/tt0000036/ << processing\n",
-      "37 https://www.imdb.com/title/tt0000037/ << processing\n",
-      "38 https://www.imdb.com/title/tt0000038/ << processing\n",
-      "39 https://www.imdb.com/title/tt0000039/ << processing\n",
-      "40 https://www.imdb.com/title/tt0000040/ << processing\n",
-      "41 https://www.imdb.com/title/tt0000041/ << processing\n",
-      "42 https://www.imdb.com/title/tt0000042/ << processing\n",
-      "43 https://www.imdb.com/title/tt0000043/ << processing\n",
-      "44 https://www.imdb.com/title/tt0000044/ << processing\n",
-      "45 https://www.imdb.com/title/tt0000045/ << processing\n",
-      "46 https://www.imdb.com/title/tt0000046/ << processing\n",
-      "47 https://www.imdb.com/title/tt0000047/ << processing\n",
-      "48 https://www.imdb.com/title/tt0000048/ << processing\n",
-      "49 https://www.imdb.com/title/tt0000049/ << processing\n",
-      "50 https://www.imdb.com/title/tt0000050/ << processing\n",
-      "51 https://www.imdb.com/title/tt0000051/ << processing\n",
-      "52 https://www.imdb.com/title/tt0000052/ << processing\n",
-      "53 https://www.imdb.com/title/tt0000053/ << processing\n",
-      "54 https://www.imdb.com/title/tt0000054/ << processing\n",
-      "55 https://www.imdb.com/title/tt0000055/ << processing\n",
-      "56 https://www.imdb.com/title/tt0000056/ << processing\n",
-      "57 https://www.imdb.com/title/tt0000057/ << processing\n",
-      "58 https://www.imdb.com/title/tt0000058/ << processing\n",
-      "59 https://www.imdb.com/title/tt0000059/ << processing\n",
-      "60 https://www.imdb.com/title/tt0000060/ << processing\n",
-      "61 https://www.imdb.com/title/tt0000061/ << processing\n",
-      "62 https://www.imdb.com/title/tt0000062/ << processing\n",
-      "63 https://www.imdb.com/title/tt0000063/ << processing\n",
-      "64 https://www.imdb.com/title/tt0000064/ << processing\n",
-      "65 https://www.imdb.com/title/tt0000065/ << processing\n",
-      "66 https://www.imdb.com/title/tt0000066/ << processing\n",
-      "67 https://www.imdb.com/title/tt0000067/ << processing\n",
-      "68 https://www.imdb.com/title/tt0000068/ << processing\n",
-      "69 https://www.imdb.com/title/tt0000069/ << processing\n",
-      "70 https://www.imdb.com/title/tt0000070/ << processing\n",
-      "71 https://www.imdb.com/title/tt0000071/ << processing\n",
-      "72 https://www.imdb.com/title/tt0000072/ << processing\n",
-      "73 https://www.imdb.com/title/tt0000073/ << processing\n",
-      "74 https://www.imdb.com/title/tt0000074/ << processing\n",
-      "75 https://www.imdb.com/title/tt0000075/ << processing\n",
-      "76 https://www.imdb.com/title/tt0000076/ << processing\n",
-      "77 https://www.imdb.com/title/tt0000077/ << processing\n",
-      "78 https://www.imdb.com/title/tt0000078/ << processing\n",
-      "79 https://www.imdb.com/title/tt0000079/ << processing\n",
-      "80 https://www.imdb.com/title/tt0000080/ << processing\n",
-      "81 https://www.imdb.com/title/tt0000081/ << processing\n",
-      "82 https://www.imdb.com/title/tt0000082/ << processing\n",
-      "83 https://www.imdb.com/title/tt0000083/ << processing\n",
-      "84 https://www.imdb.com/title/tt0000084/ << processing\n",
-      "85 https://www.imdb.com/title/tt0000085/ << processing\n",
-      "86 https://www.imdb.com/title/tt0000086/ << processing\n",
-      "87 https://www.imdb.com/title/tt0000087/ << processing\n",
-      "88 https://www.imdb.com/title/tt0000088/ << processing\n",
-      "89 https://www.imdb.com/title/tt0000089/ << processing\n",
-      "90 https://www.imdb.com/title/tt0000090/ << processing\n",
-      "91 https://www.imdb.com/title/tt0000091/ << processing\n",
-      "92 https://www.imdb.com/title/tt0000092/ << processing\n",
-      "93 https://www.imdb.com/title/tt0000093/ << processing\n",
-      "94 https://www.imdb.com/title/tt0000094/ << processing\n",
-      "95 https://www.imdb.com/title/tt0000095/ << processing\n",
-      "96 https://www.imdb.com/title/tt0000096/ << processing\n",
-      "97 https://www.imdb.com/title/tt0000097/ << processing\n",
-      "98 https://www.imdb.com/title/tt0000098/ << processing\n",
-      "99 https://www.imdb.com/title/tt0000099/ << processing\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'load_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[1;32m<timed exec>:43\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'load_df' is not defined"
+      "Fantasy Comedy Adventure  \n"
      ]
     }
    ],
+   "source": [
+    "print(genere_fun(soup))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%time\n",
     "i=1\n",
@@ -298,6 +228,7 @@
     "                            i=i+1\n",
     "                            df['Id'].append(id_)\n",
     "                            df['Link'].append(w_url)\n",
+    "                            df['Genres'].append(genere_fun(soup))\n",
     "                            df['Title'].append(Title)\n",
     "                            df['Storyline'].append(storyline)\n",
     "                            df['Director'].append(Director)\n",
