updated runtime function

--- a/imdb.ipynb
+++ b/imdb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,19 +172,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runtime_test=soup.find_all('li',class_='ipc-metadata-list__item')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def runtime_(soup):\n",
+    " runtime_test=soup.find_all('li',class_='ipc-metadata-list__item')\n",
+    " color='NaN'\n",
+    " runtime=\"NaN\"\n",
+    " for i in runtime_test:\n",
+    "    if 'Runtime' in i.text:\n",
+    "     runtime=i.text.replace('Runtime','')   \n",
+    "    if 'Color' in i.text:\n",
+    "      color=i.text #.replace('Color',' ')\n",
+    " return runtime,color"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fantasy Comedy Adventure  \n"
+      "https://www.imdb.com/title/tt0133423/ ('1 hour 13 minutes', 'ColorColor')\n",
+      "https://www.imdb.com/title/tt0133424/ ('NaN', 'NaN')\n",
+      "https://www.imdb.com/title/tt0133425/ ('1 hour 12 minutes', 'ColorColor')\n",
+      "https://www.imdb.com/title/tt0133426/ ('1 hour 23 minutes', 'ColorColor')\n",
+      "https://www.imdb.com/title/tt0133427/ ('NaN', 'ColorColor')\n",
+      "https://www.imdb.com/title/tt0133428/ ('1 hour 9 minutes', 'ColorColor')\n",
+      "https://www.imdb.com/title/tt0133429/ ('NaN', 'ColorColor')\n",
+      "https://www.imdb.com/title/tt0133430/ ('NaN', 'ColorColor')\n",
+      "https://www.imdb.com/title/tt0133431/ ('1 hour 29 minutes', 'NaN')\n",
+      "https://www.imdb.com/title/tt0133432/ ('NaN', 'ColorColor')\n"
      ]
     }
    ],
    "source": [
-    "print(genere_fun(soup))"
+    "# function to test all other function\n",
+    "\n",
+    "where =133423\n",
+    "for num in range(where,where+10):\n",
+    "  len_num=7-len(str(num))\n",
+    "  id_='0'*len_num+str(num)\n",
+    "  w_url='https://www.imdb.com/title/tt'+id_+'/'\n",
+    "  response=requests.get(w_url,headers=headers)\n",
+    "  content=response.content\n",
+    "  soup=BeautifulSoup(content,'html.parser')\n",
+    "  print(w_url,runtime_(soup))"
    ]
   },
   {
