--- a/imdb.ipynb
+++ b/imdb.ipynb
@@ -66,49 +66,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def release_info(id):\n",
-    "    key_url='https://www.imdb.com/title/tt'+id+'/releaseinfo/'\n",
-    "    #https://www.imdb.com/title/tt'+id_+'/'\n",
-    "    response_release_info=requests.get(key_url,headers=headers)\n",
-    "    content_release_info=response_release_info.content\n",
-    "    soup_release_info=BeautifulSoup(content_release_info,'html.parser')\n",
-    "    date=soup_release_info.find('span',class_='ipc-metadata-list-item__list-content-item')\n",
-    "    try:\n",
-    "       soup_release_info.find('article',class_='sc-8eb80a87-0 hQQXzj').text is not None\n",
-    "      # print('release info')\n",
-    "       return 'NaN'\n",
-    "\n",
-    "    except:\n",
-    "       #print('release info')\n",
-    "       return date.text\n",
-    "\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def runtime(id):\n",
-    "    key_url='https://www.imdb.com/title/tt'+id+'/technical/'\n",
-    "    #https://www.imdb.com/title/tt'+id_+'/'\n",
-    "    response_runtime=requests.get(key_url,headers=headers)\n",
-    "    content_runtime=response_runtime.content\n",
-    "    soup_runtime=BeautifulSoup(content_runtime,'html.parser')\n",
-    "    runtime=soup_runtime.find_all('span',class_='ipc-metadata-list-item__list-content-item--subText')\n",
-    "    color=soup_runtime.find_all('a',class_='ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link')\n",
-    "    try:\n",
-    "     return runtime[0].text,color[1].text\n",
-    "    except:\n",
-    "        return 'NaN',color[1].text\n",
-    "           \n",
-    " "
+    "def release_info(soup):\n",
+    "   date='NaN'\n",
+    "   x= soup.find_all('li',class_='ipc-metadata-list__item ipc-metadata-list-item--link')\n",
+    "   for r in x:\n",
+    "      if 'Release date' in r.text:\n",
+    "       date=r.text.replace('Release date','')\n",
+    "       break\n",
+    "   return date"
    ]
   },
   {
@@ -181,15 +150,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 233,
    "metadata": {},
    "outputs": [],
@@ -208,30 +168,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.imdb.com/title/tt0133423/ ('1 hour 13 minutes', 'ColorColor')\n",
-      "https://www.imdb.com/title/tt0133424/ ('NaN', 'NaN')\n",
-      "https://www.imdb.com/title/tt0133425/ ('1 hour 12 minutes', 'ColorColor')\n",
-      "https://www.imdb.com/title/tt0133426/ ('1 hour 23 minutes', 'ColorColor')\n",
-      "https://www.imdb.com/title/tt0133427/ ('NaN', 'ColorColor')\n",
-      "https://www.imdb.com/title/tt0133428/ ('1 hour 9 minutes', 'ColorColor')\n",
-      "https://www.imdb.com/title/tt0133429/ ('NaN', 'ColorColor')\n",
-      "https://www.imdb.com/title/tt0133430/ ('NaN', 'ColorColor')\n",
-      "https://www.imdb.com/title/tt0133431/ ('1 hour 29 minutes', 'NaN')\n",
-      "https://www.imdb.com/title/tt0133432/ ('NaN', 'ColorColor')\n"
+      "https://www.imdb.com/title/tt1936723/ June 2, 2011 (Portugal)\n",
+      "https://www.imdb.com/title/tt1936724/ June 3, 2011 (Portugal)\n",
+      "https://www.imdb.com/title/tt1936725/ June 4, 2011 (Portugal)\n",
+      "https://www.imdb.com/title/tt1936726/ December 11, 2010 (Greece)\n",
+      "https://www.imdb.com/title/tt1936727/ December 13, 2010 (Greece)\n",
+      "https://www.imdb.com/title/tt1936728/ July 2007 (Japan)\n",
+      "https://www.imdb.com/title/tt1936729/ 1997 (Israel)\n",
+      "https://www.imdb.com/title/tt1936730/ May 20, 2011 (Czech Republic)\n",
+      "https://www.imdb.com/title/tt1936731/ May 13, 2011 (United States)\n",
+      "https://www.imdb.com/title/tt1936732/ June 2, 2011 (Canada)\n"
      ]
     }
    ],
    "source": [
     "# function to test all other function\n",
     "\n",
-    "where =133423\n",
+    "where =1936723\n",
     "for num in range(where,where+10):\n",
     "  len_num=7-len(str(num))\n",
     "  id_='0'*len_num+str(num)\n",
@@ -239,7 +199,8 @@
     "  response=requests.get(w_url,headers=headers)\n",
     "  content=response.content\n",
     "  soup=BeautifulSoup(content,'html.parser')\n",
-    "  print(w_url,runtime_(soup))"
+    "  print(w_url,release_infoe(soup))\n",
+    "  #break"
    ]
   },
   {
@@ -270,7 +231,7 @@
     "                            except:\n",
     "                              storyline='NaN'\n",
     "                            Director=soup.find_all('a',class_='ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link')[0].text\n",
-    "                            Date=release_info(id_)\n",
+    "                            Date=release_info(soup)\n",
     "                            \n",
     "                            Runtime_,colr=runtime(id_)\n",
     "                            try:\n",
