removed storyline function

--- a/imdb.ipynb
+++ b/imdb.ipynb
@@ -53,7 +53,6 @@
     "def keywords(id):\n",
     "    word=''\n",
     "    key_url='https://www.imdb.com/title/tt'+id+'/keywords/'\n",
-    "    #https://www.imdb.com/title/tt'+id_+'/'\n",
     "    response_keyword=requests.get(key_url,headers=headers)\n",
     "    content_keyword=response_keyword.content\n",
     "    soup_keyword=BeautifulSoup(content_keyword,'html.parser')\n",
@@ -141,15 +140,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "runtime_test=soup.find_all('li',class_='ipc-metadata-list__item')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 233,
    "metadata": {},
    "outputs": [],
@@ -168,38 +158,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.imdb.com/title/tt1936723/ June 2, 2011 (Portugal)\n",
-      "https://www.imdb.com/title/tt1936724/ June 3, 2011 (Portugal)\n",
-      "https://www.imdb.com/title/tt1936725/ June 4, 2011 (Portugal)\n",
-      "https://www.imdb.com/title/tt1936726/ December 11, 2010 (Greece)\n",
-      "https://www.imdb.com/title/tt1936727/ December 13, 2010 (Greece)\n",
-      "https://www.imdb.com/title/tt1936728/ July 2007 (Japan)\n",
-      "https://www.imdb.com/title/tt1936729/ 1997 (Israel)\n",
-      "https://www.imdb.com/title/tt1936730/ May 20, 2011 (Czech Republic)\n",
-      "https://www.imdb.com/title/tt1936731/ May 13, 2011 (United States)\n",
-      "https://www.imdb.com/title/tt1936732/ June 2, 2011 (Canada)\n"
+      "Adventure\n",
+      "Comedy\n",
+      "Fantasy\n",
+      "Back to top\n",
+      "https://www.imdb.com/title/tt1517268/ None\n",
+      "Documentary\n",
+      "Short\n",
+      "Back to top\n",
+      "https://www.imdb.com/title/tt1517267/ None\n",
+      "Action\n",
+      "Sci-Fi\n",
+      "Thriller\n",
+      "Back to top\n",
+      "https://www.imdb.com/title/tt1517266/ None\n",
+      "Documentary\n",
+      "Back to top\n",
+      "https://www.imdb.com/title/tt1517265/ None\n",
+      "Back to top\n",
+      "https://www.imdb.com/title/tt1517264/ None\n",
+      "Music\n",
+      "Back to top\n",
+      "https://www.imdb.com/title/tt1517263/ None\n",
+      "Comedy\n",
+      "Drama\n",
+      "Back to top\n",
+      "https://www.imdb.com/title/tt1517262/ None\n",
+      "Documentary\n",
+      "Back to top\n",
+      "https://www.imdb.com/title/tt1517261/ None\n",
+      "Action\n",
+      "Adventure\n",
+      "Drama\n",
+      "Back to top\n",
+      "https://www.imdb.com/title/tt1517260/ None\n",
+      "Documentary\n",
+      "Back to top\n",
+      "https://www.imdb.com/title/tt1517259/ None\n"
      ]
     }
    ],
    "source": [
     "# function to test all other function\n",
     "\n",
-    "where =1936723\n",
-    "for num in range(where,where+10):\n",
+    "where =1517268\n",
+    "for num in range(where,where-10,-1):\n",
     "  len_num=7-len(str(num))\n",
     "  id_='0'*len_num+str(num)\n",
     "  w_url='https://www.imdb.com/title/tt'+id_+'/'\n",
     "  response=requests.get(w_url,headers=headers)\n",
     "  content=response.content\n",
     "  soup=BeautifulSoup(content,'html.parser')\n",
-    "  print(w_url,release_infoe(soup))\n",
+    "  #print(w_url,keywords_(soup))\n",
+    "\n",
     "  #break"
    ]
   },
@@ -226,10 +244,6 @@
     "                              continue\n",
     "                            print(i,w_url,'<< processing')\n",
     "                            Title=soup.find('span',class_='sc-afe43def-1 fDTGTb').text\n",
-    "                            try:\n",
-    "                             storyline=soup.find_all('div',class_='ipc-html-content-inner-div')[2].text\n",
-    "                            except:\n",
-    "                              storyline='NaN'\n",
     "                            Director=soup.find_all('a',class_='ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link')[0].text\n",
     "                            Date=release_info(soup)\n",
     "                            \n",
@@ -246,7 +260,6 @@
     "                            df['Link'].append(w_url)\n",
     "                            df['Genres'].append(genere_fun(soup))\n",
     "                            df['Title'].append(Title)\n",
-    "                            df['Storyline'].append(storyline)\n",
     "                            df['Director'].append(Director)\n",
     "                            df['Date'].append(Date)\n",
     "                            df['Runtime'].append(Runtime_)\n",
