added function to scrap cast

--- a/imdb.ipynb
+++ b/imdb.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "import time\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,16 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df={'Id':[],'Title':[],'Storyline':[],'Genres':[],'Director':[],'Date':[],'Runtime':[],'Rating':[],'Color':[],'Country':[],'keywords':[]}"
+    "df={'Id':[],'Link':[],'Title':[],'Genres':[],'Director':[],'Cast':[],'Date':[],'Runtime':[],'Rating':[],'Color':[],'Country':[],'keywords':[]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,50 +159,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cast(soup):\n",
+    "    div_elements=soup.find_all('a',class_='sc-bfec09a1-1 fUguci')\n",
+    "    list=[element.text for element in div_elements]\n",
+    "    if len(list)>4:\n",
+    "        return list[0:6]\n",
+    "    else:\n",
+    "     return list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Adventure\n",
-      "Comedy\n",
-      "Fantasy\n",
-      "Back to top\n",
-      "https://www.imdb.com/title/tt1517268/ None\n",
-      "Documentary\n",
-      "Short\n",
-      "Back to top\n",
-      "https://www.imdb.com/title/tt1517267/ None\n",
-      "Action\n",
-      "Sci-Fi\n",
-      "Thriller\n",
-      "Back to top\n",
-      "https://www.imdb.com/title/tt1517266/ None\n",
-      "Documentary\n",
-      "Back to top\n",
-      "https://www.imdb.com/title/tt1517265/ None\n",
-      "Back to top\n",
-      "https://www.imdb.com/title/tt1517264/ None\n",
-      "Music\n",
-      "Back to top\n",
-      "https://www.imdb.com/title/tt1517263/ None\n",
-      "Comedy\n",
-      "Drama\n",
-      "Back to top\n",
-      "https://www.imdb.com/title/tt1517262/ None\n",
-      "Documentary\n",
-      "Back to top\n",
-      "https://www.imdb.com/title/tt1517261/ None\n",
-      "Action\n",
-      "Adventure\n",
-      "Drama\n",
-      "Back to top\n",
-      "https://www.imdb.com/title/tt1517260/ None\n",
-      "Documentary\n",
-      "Back to top\n",
-      "https://www.imdb.com/title/tt1517259/ None\n"
+      "https://www.imdb.com/title/tt1517268/\n",
+      "['Margot Robbie', 'Ryan Gosling', 'Issa Rae', 'Kate McKinnon', 'Alexandra Shipp', 'Emma Mackey']\n",
+      "https://www.imdb.com/title/tt1517267/\n",
+      "['Stan Berkowitz', 'Paul Dini', 'Rich Fogel', 'Charles Hatfield', 'Dwayne McDuffie', 'Glen Murakami']\n",
+      "https://www.imdb.com/title/tt1517266/\n",
+      "[]\n",
+      "https://www.imdb.com/title/tt1517265/\n",
+      "[]\n",
+      "https://www.imdb.com/title/tt1517264/\n",
+      "[]\n",
+      "https://www.imdb.com/title/tt1517263/\n",
+      "['Markus Lanz', 'Alfred Biolek', 'Roger Cicero', 'Hans-Dietrich Genscher', 'Musical Ich war Noch niemals in New York', 'Jenny Jürgens']\n",
+      "https://www.imdb.com/title/tt1517262/\n",
+      "['Jung-hun Choi', 'Kwon Chul', 'Suk-yun Hong', 'Shoko Ikezu', 'Kamou Junko', 'Jeong-hwa Kim']\n",
+      "https://www.imdb.com/title/tt1517261/\n",
+      "[]\n",
+      "https://www.imdb.com/title/tt1517260/\n",
+      "['Saoirse Ronan', 'Max Irons', 'Jake Abel', 'Diane Kruger', 'Rachel Roberts', 'Shyaam Karra']\n",
+      "https://www.imdb.com/title/tt1517259/\n",
+      "[]\n"
      ]
     }
    ],
@@ -217,15 +216,77 @@
     "  content=response.content\n",
     "  soup=BeautifulSoup(content,'html.parser')\n",
     "  #print(w_url,keywords_(soup))\n",
+    "  print(w_url)\n",
+    "  print(actor(soup))\n",
     "\n",
     "  #break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 https://www.imdb.com/title/tt1517268/ << processing\n",
+      "2 https://www.imdb.com/title/tt1517269/ << processing\n",
+      "3 https://www.imdb.com/title/tt1517270/ << processing\n",
+      "4 https://www.imdb.com/title/tt1517271/ << processing\n",
+      "5 https://www.imdb.com/title/tt1517272/ << processing\n",
+      "6 https://www.imdb.com/title/tt1517273/ << processing\n",
+      "7 https://www.imdb.com/title/tt1517274/ << processing\n",
+      "8 https://www.imdb.com/title/tt1517275/ << processing\n",
+      "9 https://www.imdb.com/title/tt1517276/ << processing\n",
+      "10 https://www.imdb.com/title/tt1517277/ << processing\n",
+      "11 https://www.imdb.com/title/tt1517278/ << processing\n",
+      "12 https://www.imdb.com/title/tt1517279/ << processing\n",
+      "13 https://www.imdb.com/title/tt1517280/ << processing\n",
+      "14 https://www.imdb.com/title/tt1517281/ << processing\n",
+      "15 https://www.imdb.com/title/tt1517282/ << processing\n",
+      "16 https://www.imdb.com/title/tt1517283/ << processing\n",
+      "17 https://www.imdb.com/title/tt1517284/ << processing\n",
+      "18 https://www.imdb.com/title/tt1517285/ << processing\n",
+      "19 https://www.imdb.com/title/tt1517286/ << processing\n",
+      "20 https://www.imdb.com/title/tt1517287/ << processing\n",
+      "21 https://www.imdb.com/title/tt1517288/ << processing\n",
+      "22 https://www.imdb.com/title/tt1517289/ << processing\n",
+      "23 https://www.imdb.com/title/tt1517290/ << processing\n",
+      "24 https://www.imdb.com/title/tt1517291/ << processing\n",
+      "25 https://www.imdb.com/title/tt1517292/ << processing\n",
+      "26 https://www.imdb.com/title/tt1517293/ << processing\n",
+      "27 https://www.imdb.com/title/tt1517294/ << processing\n",
+      "28 https://www.imdb.com/title/tt1517295/ << processing\n",
+      "29 https://www.imdb.com/title/tt1517296/ << processing\n",
+      "30 https://www.imdb.com/title/tt1517297/ << processing\n",
+      "31 https://www.imdb.com/title/tt1517298/ << processing\n",
+      "32 https://www.imdb.com/title/tt1517299/ << processing\n",
+      "33 https://www.imdb.com/title/tt1517300/ << processing\n",
+      "34 https://www.imdb.com/title/tt1517301/ << processing\n",
+      "35 https://www.imdb.com/title/tt1517302/ << processing\n",
+      "36 https://www.imdb.com/title/tt1517303/ << processing\n",
+      "37 https://www.imdb.com/title/tt1517304/ << processing\n",
+      "38 https://www.imdb.com/title/tt1517305/ << processing\n",
+      "39 https://www.imdb.com/title/tt1517306/ << processing\n",
+      "40 https://www.imdb.com/title/tt1517307/ << processing\n",
+      "41 https://www.imdb.com/title/tt1517308/ << processing\n",
+      "42 https://www.imdb.com/title/tt1517309/ << processing\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "File \u001b[1;32m<timed exec>:17\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "i=1\n",
@@ -247,7 +308,7 @@
     "                            Director=soup.find_all('a',class_='ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link')[0].text\n",
     "                            Date=release_info(soup)\n",
     "                            \n",
-    "                            Runtime_,colr=runtime(id_)\n",
+    "                            Runtime_,colr=runtime_(soup)\n",
     "                            try:\n",
     "                             Rating=(soup.find_all('span',class_='sc-bde20123-1 iZlgcd')[0]).text\n",
     "                            except:\n",
@@ -265,6 +326,7 @@
     "                            df['Runtime'].append(Runtime_)\n",
     "                            df['Color'].append(colr)\n",
     "                            df['Rating'].append(Rating)\n",
+    "                            df['Cast'].append(cast(soup))\n",
     "                            df['keywords'].append(key_words)\n",
     "                            if i==100:\n",
     "                              try:\n",
@@ -273,7 +335,7 @@
     "                               save_df.to_csv(path,index=False,sep=';',header=True)\n",
     "                               load_df = pd.read_csv(path,sep=';')\n",
     "                               print('>>',load_df.shape)\n",
-    "                               df={'Id':[],'Link':[],'Title':[],'Storyline':[],'Director':[],'Date':[],'Runtime':[],'Rating':[],'Color':[],'Country':[],'keywords':[]}\n",
+    "                               df={'Id':[],'Link':[],'Title':[],'Genres':[],'Director':[],'Cast':[],'Date':[],'Runtime':[],'Rating':[],'Color':[],'Country':[],'keywords':[]}\n",
     "                               end_time=time.time()\n",
     "                               print('>>Time', (end_time-start_time)/100)\n",
     "                               start_time=time.time()\n",
@@ -283,11 +345,31 @@
     "                                save_df.to_csv(path,index=False,sep=';',header=True)\n",
     "                                load_df = pd.read_csv(path,sep=';')\n",
     "                                print('>>',load_df.shape)\n",
-    "                                df={'Id':[],'Link':[],'Title':[],'Storyline':[],'Director':[],'Date':[],'Runtime':[],'Rating':[],'Color':[],'Country':[],'keywords':[]}\n",
+    "                                df={'Id':[],'Link':[],'Title':[],'Genres':[],'Director':[],'Cast':[],'Date':[],'Runtime':[],'Rating':[],'Color':[],'Country':[],'keywords':[]}\n",
     "                                print('File not found Solved')\n",
     "\n",
     "                              i=1\n",
     "                          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Id': 41, 'Link': 41, 'Title': 41, 'Storyline': 0, 'Genres': 41, 'Director': 41, 'Cast': 41, 'Date': 41, 'Runtime': 41, 'Rating': 41, 'Color': 41, 'Country': 41, 'keywords': 41}\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf={}\n",
+    "for key in df:\n",
+    "    rf[key]=len(df[key])\n",
+    "print(rf)"
    ]
   }
  ],
